--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,14 +37,14 @@ website:
               contents:
               - text: "Module 1: Intro to R"
                 contents:
-                href: materials/2-r-rstudio-quarto/1-welcome-to-quarto/index.qmd
+                href: materials/1-workshop1/2-intro-to-r/index.qmd
               - text: "Module 2: Welcome to Quarto"
                 href: materials/1-workshop1/1-welcome-to-quarto/index.qmd
           - section: "Working with High Dimensional 16S rRNA Sequencing Data in R"
           - section: "Bioinformatics and Transcriptomics Data Analysis"
   page-footer:
     right: "This page is built with {{< fa heart >}} and [Quarto](https://quarto.org/)."
-    left: "&copy; 2023"
+    left: "&copy; 2023. Huge thanks to [Andrew P. Bray](https://github.com/andrewpbray) and [Claus O. Wilke](https://github.com/clauswilke) for open source code."
 
 format: 
   html:
