--- a/_extensions/qmdr/qmdrslides/_extension.yml
+++ b/_extensions/qmdr/qmdrslides/_extension.yml
@@ -5,21 +5,23 @@ quarto-required: ">=1.3.0"
 contributes:
   formats:
     revealjs:
-      subtitle: "Workshop: Quarto for R & RStudio </br> posit::conf 2023"
+      subtitle: "Data Science for Biology </br> Workshop 1"
       height: 900
       width: 1600
       theme: slides.scss
       multiplex: false
+      chalkboard:
+        buttons: false
       transition: fade
-      slide-number: c
-      footer: "[Quarto for R & RStudio](index.html)"
+      slide-number: c/t
+      footer: "[back to module](index.html)"
       incremental: false 
       menu: false
       highlight-style: github
       progress: false
       code-overflow: wrap
       title-slide-attributes:
-        data-background-image: seaplane-bg.png
+        data-background-image: durban-watercolor-gradient.png
         data-background-size: contain
         data-background-color: "#f8f5f0"
       include-before-body:
