--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ website:
     right:
       - text: "Installation"
         href: installation-instructions.qmd
+      - text: "Datasets"
+        href: datasets.qmd
       - text: "Resources"
         href: resources.qmd
       - text: "About"
@@ -42,12 +44,13 @@ website:
             - text: "<b>Module 2</b>: Intro to R, Rstudio, and Quarto"
               contents:
               href: materials/1-workshop1/2-intro-to-r/index.qmd
-            - text: "<b>Module 3</b>: Intro to data visualizaion with the <code>tidyverse</code>"
+            - text: "<b>Module 3</b>: Intro to data visualization and data wrangling with the <code>tidyverse</code>"
               contents:
               href: materials/1-workshop1/3-tidyverse-101/index.qmd
             - text: "<b>Module 4</b>: Data wrangling and more data visualization"
             - text: "<b>Module 5</b>: <code>tableone</code> and statistics for clincal data"
             - text: "<b>Module 6</b>: Data transformations and more statistics"
+            - text: "<b>Module 7</b>: Customizing data visualizations using <code>colorspace</code>, <code>ggplot2</code>, and <code>patchwork</code>"
           - section: "<em>2. Working with High Dimensional Data in R - human microbiome - Coming April 2024 </em>"
           - section: "<em>3. Bioinformatics and Transcriptomics Data Analysis - Coming October 2024</em>"
   page-footer:
