--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,7 +48,9 @@ website:
             - text: "<b>Module 4</b>: Data wrangling and more data visualization"
               contents:
               href: materials/1-workshop1/4-tidyverse-201/index.qmd
-            - text: "<b>Module 5</b>: <code>tableone</code> and statistics for clinical data"
+            - text: "<b>Module 5</b>: <code>tableone</code> and its Basic Statistics"
+              contents:
+              href: materials/1-workshop1/5-tableone/index.qmd
             - text: "<b>Module 6</b>: Data transformations and more statistics"
             - text: "<b>Module 7</b>: Customizing data visualizations using <code>colorspace</code>, <code>ggplot2</code>, and <code>patchwork</code>"
               contents:
