--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,8 @@ project:
   output-dir: docs
   resources:
     - "datasets/*/*.csv"
+    - "materials/1-workshop1/6-hypothesis-testing/hands-on.qmd"
+
 from: markdown+emoji
 
 website:
@@ -52,6 +54,8 @@ website:
               contents:
               href: materials/1-workshop1/5-tableone/index.qmd
             - text: "<b>Module 6</b>: Data transformations and more statistics"
+              contents:
+              href: materials/1-workshop1/6-hypothesis-testing/index.qmd
             - text: "<b>Module 7</b>: Customizing data visualizations using <code>colorspace</code>, <code>ggplot2</code>, and <code>patchwork</code>"
               contents:
               href: materials/1-workshop1/7-custom-data-visualizations/index.qmd
