--- a/_extensions/qmdr/qmdrslides/_extension.yml
+++ b/_extensions/qmdr/qmdrslides/_extension.yml
@@ -5,7 +5,7 @@ quarto-required: ">=1.3.0"
 contributes:
   formats:
     revealjs:
-      subtitle: "Data Science for Biology </br> Workshop 1"
+      subtitle: "Data Science for Biology"
       height: 900
       width: 1600
       theme: slides.scss
