--- a/_quarto.yml
+++ b/_quarto.yml
@@ -69,22 +69,25 @@ website:
 
           - section: "<b>2. Working with High Dimensional Data in R - The Human Microbiome</b>"
             contents:
-            - text: "<b>Module 0:</b> Welcome and Course Introduction"
+            - text: "<b>Module 0:</b> Welcome to the workshop"
               contents:
-              href: materials/2-workshop2/1-introduction/index.qmd
-            - text: "<b>Module 1</b>: R Refresher"
+              href: materials/2-workshop2/0-welcome/index.qmd
+            - text: "<b>Module 1</b>: Sequencing Library Preparation"
+              contents:
+              href: materials/2-workshop2/1-library-prep/index.qmd
+            - text: "<b>Module 2</b>: R Refresher"
               contents:
               href: materials/2-workshop2/2-r-refresher/index.qmd
-            - text: "<b>Module 2</b>: 16S Data Processing"
+            - text: "<b>Module 3</b>: 16S Data Processing"
               contents:
               href: materials/2-workshop2/3-16s_processing/index.qmd
-            - text: "<b>Module 3</b>: 16S analysis pt.1"
+            - text: "<b>Module 4</b>: Exploring High Dimensional Data"
               contents:
               href: materials/2-workshop2/4-16s-pt1/index.qmd
-            - text: "<b>Module 4</b>: 16S analysis pt.2"
+            - text: "<b>Module 5</b>: Correlations and Differential Abundance Testing"
               contents:
               href: materials/2-workshop2/5-16s-pt2/index.qmd
-            - text: "<b>Module 5</b>: VIRGO"
+            - text: "<b>Module 6</b>: VIRGO"
               contents:
               href: materials/2-workshop2/6-virgo/index.qmd
             - text: "<b>Module 6</b>: Keynote "
